
[project]
name = "arabot"
version = "8.23.8"
requires-python = ">=3.13"
dependencies = [
    "disnake[speed,voice]~=2.12.0",
    "prisma",
    "jikanpy-v4",
    "matplotlib",
    "numpy",
    "gacha-py",
    "python-dotenv",
    "tzdata",
    "async-lru",
    "waifu-py",
    "uvloop ; sys_platform != 'win32'",
    "winloop ; sys_platform == 'win32'",
    "pyscribest",
]
license = "MPL-2.0"

[dependency-groups]
dev = [
    "ruff",
]

[tool.uv.sources]
gacha-py = { url = "https://github.com/rexor12/gacha.py/releases/download/1.0.4/gacha.py-1.0.4-py3-none-any.whl" }


[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
exclude = ["tools/database_editor.py"]
select = ["ALL"]
ignore = [
    "A003",    # builtin-attribute-shadowing
    "ANN002",  # missing-type-args
    "ANN003",  # missing-type-kwargs
    "ANN201",  # missing-return-type-undocumented-public-function
    "ARG002",  # unused-method-argument
    "BLE",     # flake8-blind-except
    "C90",     # mccabe
    "COM812",  # missing-trailing-comma
    "D1",      # pydocstyle Missing Docstrings
    "D203",    # one-blank-line-before-class
    "D205",    # blank-line-after-summary
    "D213",    # multi-line-summary-second-line
    "E731",    # lambda-assignment
    "EM",      # flake8-errmsg
    "FBT",     # flake8-boolean-trap
    "INP",     # flake8-no-pep420
    "INT",     # flake8-gettext
    "N818",    # error-suffix-on-exception-name
    "PLR0912", # too-many-branches
    "PLR0913", # too-many-arguments
    "PLR2004", # magic-value-comparison
    "RUF001",  # ambiguous-unicode-character-string
    "S311",    # suspicious-non-cryptographic-random-usage
    "S603",    # subprocess-without-shell-equals-true
    "S607",    # start-process-with-partial-path
    "SLF",     # flake8-self
    "TD002",   # missing-todo-author
    "TD003",   # missing-todo-link
    "TRY003",  # raise-vanilla-args
    "TRY400",  # error-instead-of-exception
    "TRY400",  # error-instead-of-exception
]

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true
allow-star-arg-any = true

[tool.ruff.lint.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = true

[tool.ruff.lint.flake8-import-conventions]
banned-from = ["json", "orjson"]

[tool.ruff.lint.isort]
classes = ["clean_content", "pfxless"]

[tool.ruff.lint.pep8-naming]
ignore-names = []

[tool.ruff.lint.per-file-ignores]
"arabot/core/__init__.py" = ["F401", "F403"]
"arabot/utils/__init__.py" = [
    "F401", # unused-import
    "F403", # undefined-local-with-import-star
]
"arabot/plugins/eval/client.py" = ["S307"] # Allow the use of eval
